--- a/package.json
+++ b/package.json
@@ -3,10 +3,8 @@
   "version": "1.0.0",
   "description": "Files for my Building a Website with Node & ExpressJS course on Lynda.com",
   "main": "app/app.js",
-  "scripts": {
-    "start": "nodemon -e css,ejs,js,json --watch app --ignore feedback.json"
-  },
-  "author": "Ray Villalobos",
+  
+  "author": "Malisha Christian",
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.15.2",
@@ -14,5 +12,13 @@
     "express": "^4.14.0",
     "reload": "^1.0.0",
     "socket.io": "^1.4.8"
+  },
+  "scripts": {
+    // "start": "nodemon -e css,ejs,js,json --watch app --ignore feedback.json"
+
+    "start": "node index.js"
+  },
+  "engines":{
+    "node": "0.12.7"
   }
 }
