--- a/package.json
+++ b/package.json
@@ -1,24 +1,23 @@
 {
-  "name": "expressjs",
+  "name": "VibrantMeetups",
   "version": "1.0.0",
-  "description": "Files for my Building a Website with Node & ExpressJS course on Lynda.com",
-  "main": "app/app.js",
-  
-  "author": "Malisha Christian",
-  "license": "MIT",
+  "description": "",
+  "main": "index.js",
   "dependencies": {
     "body-parser": "^1.15.2",
-    "ejs": "^2.4.2",
+    "reload": "^1.0.1",
     "express": "^4.14.0",
-    "reload": "^1.0.0",
+    "ejs": "^2.5.2",
     "socket.io": "^1.4.8"
   },
+  "devDependencies": {},
   "scripts": {
-    // "start": "nodemon -e css,ejs,js,json --watch app --ignore feedback.json"
-
-    "start": "node index.js"
+    "start": "node ./app/app.js"
   },
-  "engines":{
-    "node": "0.12.7"
-  }
+  
+  "keywords": [],
+  "author": "Malisha Christian",
+  "license": "ISC"
+  
+  
 }
